css/custom.css
/* ... */
.vue-form input[type="checkbox"]+label::after {
    background-image: url("data:image/svg+xml;charset=utf-8,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22utf-8%22%3F%3E%0D%0A%3C%21--%20Generator%3A%20Adobe%20Illustrator%2018.1.1%2C%20SVG%20Export%20Plug-In%20.%20SVG%20Version%3A%206.00%20Build%200%29%20%20--%3E%0D%0A%3C%21DOCTYPE%20svg%20PUBLIC%20%22-%2F%2FW3C%2F%2FDTD%20SVG%201.1%2F%2FEN%22%20%22http%3A%2F%2Fwww.w3.org%2FGraphics%2FSVG%2F1.1%2FDTD%2Fsvg11.dtd%22%3E%0D%0A%3Csvg%20version%3D%221.1%22%20id%3D%22Layer_1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20x%3D%220px%22%20y%3D%220px%22%0D%0A%09%20width%3D%2216px%22%20height%3D%2216px%22%20viewBox%3D%220%200%2016%2016%22%20enable-background%3D%22new%200%200%2016%2016%22%20xml%3Aspace%3D%22preserve%22%3E%0D%0A%3Cpolyline%20fill%3D%22none%22%20stroke%3D%22%23FFFFFF%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22square%22%20stroke-miterlimit%3D%2210%22%20points%3D%225%2C8%207%2C10%2011%2C6%20%22%2F%3E%0D%0A%3C%2Fsvg%3E");
}

.vue-form input[type="radio"]:focus+label::before,
.vue-form input[type="checkbox"]:focus+label::before {
    box-shadow: 0 0 5px rgba(44, 151, 222, 0.6);
}

.vue-form input[type="radio"]:checked+label::after,
.vue-form input[type="checkbox"]:checked+label::after {
    display: block;
}

.vue-form input[type="radio"]:checked+label::before,
.vue-form input[type="radio"]:checked+label::after,
.vue-form input[type="checkbox"]:checked+label::before,
.vue-form input[type="checkbox"]:checked+label::after {
    animation: cd-bounce 0.3s;
}

.vue-form textarea {
    min-height: 120px;
    resize: vertical;
    overflow: auto;
}

.vue-form input[type="submit"] {
    border: none;
    background: black;
    border-radius: 0.25em;
    padding: 12px 20px;
    color: white;
    font-weight: bold;
    float: right;
    cursor: pointer;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    appearance: none;
}

.no-touch .vue-form input[type="submit"]:hover {
    background: #42a2e1;
}

.vue-form input[type="submit"]:focus {
    outline: none;
    background: black;
}

.vue-form input[type="submit"]:active {
    transform: scale(0.9);
}

.vue-form .error-message {
    height: 35px;
    margin: 0px;
}

.vue-form .error-message p {
    background: #e94b35;
    color: #ffffff;
    font-size: 1.4rem;
    text-align: center;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    border-radius: 0.25em;
    padding: 16px;
}

.vue-form .error {
    border-color: #e94b35 !important;
}

.vue-form .counter {
    background-color: #ecf0f1;
    position: absolute;
    right: 0px;
    top: 0px;
    font-size: 10px;
    padding: 4px;
}

.debug {
    border-radius: 0px;
    width: 500px;
    margin: 50px auto;
}

.debug pre {
    font-size: 14px;
    line-height: 30px;
    font-family: "Source Code Pro", monospace;
    font-weight: 300;
    white-space: pre-wrap;
    border: transparent;
}

@-webkit-keyframes cd-bounce {

    0%,
    100% {
        -webkit-transform: scale(1);
    }

    50% {
        -webkit-transform: scale(0.8);
    }
}

@-moz-keyframes cd-bounce {

    0%,
    100% {
        -moz-transform: scale(1);
    }

    50% {
        -moz-transform: scale(0.8);
    }
}

@keyframes cd-bounce {

    0%,
    100% {
        transform: scale(1);
    }

    50% {
        transform: scale(0.8);
    }
}

